<resources>
    <string name="app_name" translatable="false">ChallengeChapter5</string>
    <string name="app_namec" translatable="false">App C</string>

    <string name="register" translatable="false">Register</string>
    <string name="nama_user">Nama User</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_memiliki_akun">Sudah Memiliki Akun?</string>
    <string name="login" translatable="false">Login</string>
    <string name="emailLogin">Email</string>
    <string name="kata_sandiLogin">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum Memiliki Akun?</string>
    <string name="home">HOME</string>
    <string name="welcome">Welcome,</string>
    <string name="detail">Detail</string>
    <string name="nama_film">Nama Film</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="sinopsys">Sinopsys</string>
    <string name="favorite">Favorite</string>
    <string name="profil">Profil</string>
    <string name="nama_userProf">Nama User</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="perbarui">Perbarui</string>
    <string name="keluar">Keluar</string>
    <string name="crashlytics_testing">Crashlytics Testing</string>
</resources>